force-app/main/default/objects/BMCServiceDesk__SLA_Milestone_Change_Transaction__c/BMCServiceDesk__SLA_Milestone_Change_Transaction__c.object-meta.xml
<CustomObject>
    <description>Milestone transaction table for change request SVTs.</description>
    <label>SLA Milestone Change Transaction</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>SLA Milestone Change Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SLA Milestone Change Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>