force-app/main/default/objects/BMCServiceDesk__SLA_Milestone_Change_Transaction__c/fields/BMCServiceDesk__FKChange__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKChange__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Change record related to this milestone / SVT</description>
    <label>Change</label>
    <referenceTo>BMCServiceDesk__Change_Request__c</referenceTo>
    <relationshipLabel>SLA Milestone Change Transaction</relationshipLabel>
    <relationshipName>SLA_Milestone_Change_Transaction</relationshipName>
    <type>Lookup</type>
</CustomField>