force-app/main/default/objects/BMCServiceDesk__SLA_Milestone_Change_Transaction__c/fields/BMCServiceDesk__FKChange_Service_Target__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKChange_Service_Target__c</fullName>
    <description>Change Service Target that is related to this milestone.</description>
    <label>Change Service Target</label>
    <referenceTo>BMCServiceDesk__Change_Request_Service_Target__c</referenceTo>
    <relationshipLabel>SLA Milestone Change Transaction</relationshipLabel>
    <relationshipName>SLA_Milestone_Change_Transaction</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>