force-app/main/default/objects/BMCServiceDesk__SLA_Milestone_Change_Transaction__c/fields/BMCServiceDesk__FKSLA__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKSLA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agreement</label>
    <referenceTo>BMCServiceDesk__ServiceLevelAgreement__c</referenceTo>
    <relationshipLabel>SLA Milestone Change Transaction</relationshipLabel>
    <relationshipName>SLA_Milestone_Change_Transaction</relationshipName>
    <type>Lookup</type>
</CustomField>