force-app/main/default/objects/BMCServiceDesk__SLA_Milestone_Change_Transaction__c/fields/BMCServiceDesk__FKSLA_Milestone__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKSLA_Milestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SLA Milestone</description>
    <label>SLA Milestone</label>
    <referenceTo>BMCServiceDesk__SLA_Milestones__c</referenceTo>
    <relationshipLabel>SLA Milestone Change Transaction</relationshipLabel>
    <relationshipName>SLA_Milestone_Change_Transaction</relationshipName>
    <type>Lookup</type>
</CustomField>