force-app/main/default/objects/BMCServiceDesk__SLA_Milestone_Change_Transaction__c/fields/BMCServiceDesk__FKSLA_Milestone_Action__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKSLA_Milestone_Action__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SLA Milestone Action</description>
    <label>SLA Milestone Action</label>
    <referenceTo>BMCServiceDesk__SLA_Milestone_Actions__c</referenceTo>
    <relationshipLabel>SLA Milestone Change Transaction</relationshipLabel>
    <relationshipName>SLA_Milestone_Change_Transaction</relationshipName>
    <type>Lookup</type>
</CustomField>