force-app/main/default/objects/BMCServiceDesk__SLA_Milestone_Change_Transaction__c/fields/BMCServiceDesk__SLA_Milestone_Type__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__SLA_Milestone_Type__c</fullName>
    <formula>BMCServiceDesk__FKSLA_Milestone__r.BMCServiceDesk__Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SLA Milestone Type</label>
    <type>Text</type>
</CustomField>